2005-06-11 14:10 Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/Gorm.gorm: Addition of "Translation" submenu as well
	as Load Strings and Export Strings
	* GormCore/GormDocument.h: Declaration of exportStrings
	* GormCore/GormDocument.m: Implementation of exportStrings
	* GormCore/GormProtocol.h: Declaration of app level exportStrings:
	* Gorm.m: Implementation of app level exportStrings: method.

2005-06-11 05:13 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.m: Improved translate method.
	* Gorm.m: validateMenuItem: add case to handle translate menu.

2005-06-10 07:45 Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/Gorm.gorm: Addition of "Translate" menu.
	* GormCore/GormClassInspector.m: Corrected problem in 
	outlet and action data sources in tableView:setObjectValue:
	tableColumn:row:
	* GormCore/GormDocument.h: Added translate method, also added
	selectClass:editClass: method declarations.
	* GormCore/GormDocument.m Added translate method, also added
	selectClass:editClass: method implementation.
	* GormCore/GormProtocol.h: Added translate method declaration
	to call from the menu.
	* Gorm.m: Added translate method implementation which simply
	calls the method on the currently active document.

2005-06-04 07:41 Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/GormClassInspector.gorm: Updated to new .gorm file
	version
	* English.lproj/GormDocument.gorm: Added new profile to drop down. 
	* English.lproj/GormViewSizeInspector.gorm: Updated to new .gorm 
	file version
	* GormCore/GormDocument.m: Change to _replaceObjectsWithTemplates: to
	always replace windows with a GSWindowTemplate.  This allows the 
	autoposition and defered logic to work properly when loading this
	.gorm file in an application.
	* GormCore/GormFilePrefsManager.m: Bumped version to 0.10.1
	* GormCore/GormViewSizeInspector.m: Minor changes.
	* GormInfo.plist: Bumped version to 0.10.1